minor typesetting modifications. thanks, krishanu :)

--- a/main.tex
+++ b/main.tex
@@ -101,8 +101,10 @@
 \newcommand{\co}{\colon\thinspace}
 \newcommand{\into}{\hookrightarrow}
 \newcommand{\cotensor}{\square}
-\renewcommand{\th}{\textsuperscript{th}}
 \newcommand{\from}{\leftarrow}
+
+\renewcommand{\th}{\textsuperscript{th}}
+\newcommand{\st}{\textsuperscript{st}}
 
 \newcommand{\bigast}{\mathop{\Huge \mathlarger{\mathlarger{\ast}}}}
 % \newcommand{\bigcirc}{\mathop{\Huge \mathlarger{\mathlarger{\circ}}}}
