--- a/mo.tex
+++ b/mo.tex
@@ -38,7 +38,7 @@ We can interpret $T$ as a functor off of the slice category over $BGL_1 S^{n-1}$
 
 \todo{You can make this section clearer by noticing that the map $J_{\R}^n$ is directly induced by a map $O(n) \to h\Aut S^{n-1}$ by the action of $O(n)$ on $\R^n$.  This makes the commutativity of the relevant diagrams clear, whereas using the Yoneda lemma does not make it clear that we can take the appropriate homotopy colimits.  --Mauro}
 Next, the spherical subbundle of a vector bundle gives a common source of spherical bundles.  Since rank $n$ vector bundles are also classified by an object $BO(n)$, this begets a map $J_{\R}^n\co BO(n) \to B \GL_1 S^{n-1}$ for each $n$.  Stable homotopy theorists are very interested in the block--inclusion maps $i^n\co BO(n) \to BO(n+1)$ and the colimit $BO = BO(\infty)$.  The suspension functor induces a map $\GL_1 S^{n-1} \to \GL_1 S^n$, and we are led to ask about the compatibility of these operations.  As a route to answering this, the block--inclusion maps are a special case of a more general direct sum map $\oplus\co BO(n) \times BO(m) \to BO(n+m)$, given by the precomposition \[BO(n) = BO(n) \times * \xrightarrow{\operatorname{id} \times \text{triv}} BO(n) \times BO(1) \xrightarrow\oplus BO(n+1).\] The spaces $B \GL_1 S^{n-1}$ enjoy a similar ``collective monoid'' structure, given by taking the fiberwise join two spherical bundles with a common base.
-\begin{lemma}
+\begin{lemma}\label{JIsMonoidal}
 The fiberwise join is represented by maps \[B\GL_1 S^{n-1} \times B\GL_1 S^{m-1} \to B\GL_1 S^{n+m-1},\] and these maps commute with the block sum maps on the $BO(n)$ family: \todo{Split the left vertical arrow into two?} \todo{Index it by $J_\mathbb{R}^n \times J_\mathbb{R}^m$, and the right vertical arrow by $J_\mathbb{R}^{n+m}$? -Danny}
 \begin{center}
 \begin{tikzcd}
@@ -61,7 +61,7 @@ We are now prepared to define our spectrum $MO$.  The unstable $J$--maps $J_{\R}
 \todo{Question: You essentially defined $MO$ here by piecing together the $T(J_\mathbb{R}^n)$'s. We should mention that another way to pack all this info together is to say $MO = T(J_\mathbb{R})$ -danny}
 \todo{There should be a Theorem here saying that we recover $MO$ as defined on the first day.}
 
-The spectrum $MO$ has several remarkable properties.  The most basic such property is that it is a ring spectrum, and this follows immediately from $J_{\R}$ being a homomorphism of $H$--spaces (from Lemma 1.4).  Much more excitingly, we can also deduce the presence of Thom isomorphisms just from the properties stated thus far.  That $J_{\R}$ is a homomorphism means that the following square commutes:
+The spectrum $MO$ has several remarkable properties.  The most basic such property is that it is a ring spectrum, and this follows immediately from $J_{\R}$ being a homomorphism of $H$--spaces (from \Cref{JIsMonoidal}).  Much more excitingly, we can also deduce the presence of Thom isomorphisms just from the properties stated thus far.  That $J_{\R}$ is a homomorphism means that the following square commutes:
 \begin{center}
 \begin{tikzcd}
 BO \times BO \arrow{r}{\sigma, \simeq} \arrow[bend right]{rrd} & BO \times BO \arrow{r}{\mu} \arrow{d}{J_{\R} \times J_{\R}} & BO \arrow{d}{J_{\R}} \\
@@ -86,7 +86,7 @@ MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. & \text{(definition of $MO$)} & \ph
 \noindent From here, the general version of Thom's theorem follows quickly:
 
 \begin{theorem}[Thom isomorphism]
-Let $\xi\co X \to BO$ classify a vector bundle and let $\phi: MO \to E$ be a map of ring spectra. Then there is an equivalence of $E$--modules \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X.\]
+Let $\xi\co X \to BO$ classify a vector bundle and let $\phi\co MO \to E$ be a map of ring spectra. Then there is an equivalence of $E$--modules \[E \sm T(\xi) \simeq E \sm \Susp^\infty_+ X.\]
 \end{theorem}
 
 \begin{proof}[Modifications to above proof]
@@ -98,7 +98,7 @@ BO \times X \arrow{r}{\sigma, \simeq} \arrow[bend right]{rrrd} & BO \times X \ar
 & & B\GL_1 \S \times B\GL_1 \S \arrow{r}{\mu} & B\GL_1 \S.
 \end{tikzcd}
 \end{center}
-This gives an equivalence $\theta_{MO}: MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
+This gives an equivalence $\theta_{MO}\co MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
 \begin{center}
 \begin{tikzcd}
 E \sm T(\xi)  \arrow{d}{\eta_{MO} \sm \id \sm \id=f} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
@@ -106,29 +106,18 @@ MO \sm E \sm T(\xi) \arrow{r}{\theta_{MO} \sm E} \arrow{d}{(\mu \circ (\phi \sm 
 E \sm T(\xi) \arrow{r}{\theta_E} & E \sm \Susp^\infty_+ X
 \end{tikzcd}
 \end{center}
-The bottom arrow $\theta_E$ exists by applying the action map to both sides and pushing the map $\theta_{MO} \sm E$ down.  $\theta_{MO}$ is an equivalence, and so it has an inverse $\alpha_{MO}$ - therefore the middle map has inverse $\alpha_{MO} \sm E$ and we can similarly push this down to a map $\alpha_E$ which we want to show is the inverse to $\theta_E$.  From here it is a simple diagram chase - we have renamed three of the maps in the diagram to $f$, $g$, and $h$ for brevity.  Note that $g \circ f$ is the identity map because of the unit axiom.  Then
-
+The bottom arrow $\theta_E$ exists by applying the action map to both sides and pushing the map $\theta_{MO} \sm E$ down.  Since $\theta_{MO}$ is an equivalence, it has an inverse $\alpha_{MO}$.  Therefore, the middle map has inverse $\alpha_{MO} \sm E$, and we can similarly push this down to a map $\alpha_E$, which we now want to show is the inverse to $\theta_E$.  From here it is a simple diagram chase: we have renamed three of the maps in the diagram to $f$, $g$, and $h$ for brevity.  Noting that $g \circ f$ is the identity map because of the unit axiom, we conclude
 \begin{align*}
 g\circ f &\simeq g \circ (\alpha_{MO}\sm E) \circ (\theta_{MO} \sm E) \circ f& \\
 & \simeq \alpha_E \circ h \circ (\theta_{MO}\sm E) \circ f & \text{(action map)}\\
 & \simeq \alpha_E \circ \theta_E \circ g \circ f & \text{(action map)}\\
-&\simeq \alpha_E \circ \theta_E & \qedhere
+&\simeq \alpha_E \circ \theta_E. & \qedhere
 \end{align*}
-%This gives an equivalence $\theta_{MO}: MO \sm T(\xi) \rightarrow MO \sm \Susp^\infty_+ X$.  To introduce $E$, note that there is a diagram
-%\begin{center}
-%\begin{tikzcd}
-%E \sm T(\xi) \arrow[densely dotted]{r}{\simeq} \arrow{d}{\eta_{MO} \sm \id \sm \id} & E \sm \Susp^\infty_+ X \arrow{d}{\eta_{MO} \sm \id \sm \id} \\
-%MO \sm E \sm T(\xi) \arrow{r}{\simeq} \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} & MO \sm E \sm \Susp^\infty_+ X \arrow{d}{(\mu \circ (\phi \sm \id)) \sm \id} \\
-%E \sm T(\xi) \arrow{r} & E \sm \Susp^\infty_+ X.
-%\end{tikzcd}
-%\end{center}
-%The middle equivalence comes from the previous Thom isomorphism, smashed through with $E$.  The bottom arrow exists by applying the action map to both sides.  Reusing the bottom arrow at the top arrow and using the unitality of the monoid $E$ shows the map to be an equivalence.
-\todo{I'm a little confused here. Once we have the equivalence $MO \wedge T(\xi) \simeq MO \wedge \Sigma_+^\infty X$, why can't be apply $(\varphi, id)$ to this equivalence to obtain $E \wedge T(\xi) \simeq E \wedge \Sigma_+^\infty X$? -danny}\todo{The ``unitality'' shows that the vertical compositions are the identity, and then the top map is a retract of an equivalence, right?  (If we want to use a retraction property, do we need to show that the grid diagram commutes...?  Maybe we can check a weak equivalence condition instead by pushing around homotopy elements...)}
 \end{proof}
 \todo{At least hint that there's a converse to this Theorem, to be explored later.}
 
 \begin{example}
-We'll close out today by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L - 1 \downarrow \RP^n) = \RP^{n+1}$.\todo{Is there a disuspension here?-danny}  By killing all the homotopy elements in positive degrees, we can also see that the map $MO \to H\F_2$ is a ring map\todo{This requires some justification, like $MO$ being connective .}, so that we can apply the Thom isomorphism theorem to the mod--$2$ homology of Thom complexes coming from real vector bundles:
+We'll close out today by using this to actually make a calculation. Recall from \Cref{RPnThomExample} that $T(\L \downarrow \RP^n) = \RP^{n+1}$.  By killing all the homotopy elements in positive degrees, we can also see that the map $MO \to H\F_2$ is a ring map\todo{This requires some justification, like $MO$ being connective .}, so that we can apply the Thom isomorphism theorem to the mod--$2$ homology of Thom complexes coming from real vector bundles:
 \begin{align*}
 \pi_* (H\F_2 \sm T(\L - 1)) & \cong \pi_* (H\F_2 \sm T(0)) & \text{(Thom isomorphism)} \\
 \pi_* (H\F_2 \sm \Susp^{-1} \Susp^\infty \RP^{n+1}) & \cong \pi_* (H\F_2 \sm \Susp^\infty_+ \RP^n) & \text{(\Cref{RPnThomExample})} \\
