--- a/mo.tex
+++ b/mo.tex
@@ -312,7 +312,7 @@ There is at least a map $\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*$ given by t
 We are now in a position to uncover the desired map $\alpha^*$ desired earlier.  Suppose that we were interested in re-telling Milnor's story with $H\F_2P$ in place of $H\F_2$.  The dual Steenrod algebra is defined topologically by \[\mathcal A_* := \pi_*(H\F_2 \sm H\F_2),\] which we replace by \[\mathcal AP_0 := \pi_0 (H\F_2 P \sm H\F_2 P) = H\F_2P_0(H\F_2 P) = \mathcal A_*[\xi_0^\pm].\]
 \todo{I think it's a good idea to at least mention that $\xi_0$ keeps track of the grading, as you explained in class.  Also, I see from the wedge axiom that $H\F_2 P_0(H\F_2 P) \cong \prod_j \mathcal A_*$, but how do you get the multiplicative structure of $\xi_0$?}
 
-\begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]
+\begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]\todo{Include a proof of this. It doesn't seem obvious --- Danny and I spent a while talking about it and couldn't get all our algebra straight.  It has something to do with trading the invertible element across the smash product in $H\F_2P \sm H\F_2P \sm_{H\F_2P} H\F_2P \sm X$, and also with multiplicativity of the action: $\psi(v x) = \psi(v) \psi(x)$ with $v$ the homogenizing generator, or something.}
 Projecting to the quotient Hopf algebra $\mathcal AP_0 \to \F_2[\xi_0^\pm]$ gives exactly the coaction map $\alpha^*$. \qed
 \end{lemma}
 
@@ -504,7 +504,7 @@ Let's contextualize this somewhat.  Given a finite group $G$, we can form a comm
 \end{example}
 
 \begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
-In the previous lecture, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$, which is defined by the kernel sequence \[1 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 1.\]  Today's punchline is that this is analogous to the example above: $\Cotor_{\mathcal A_*}(\F_2, H\F_{2*} X)$ is thought of as ``the derived fixed points'' of ``$G = \InternalAut_1(\G_a)$'' on the ``$G$--module'' $H\F_{2*} X$.
+In the previous lecture, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$, which is defined by the kernel sequence \[1 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 1.\]  Today's punchline is that this is analogous to the example above: $\Cotor_{\mathcal A_*}(\F_2, H\F_{2*} X)$ is thought of as ``the derived fixed points'' of ``$G = \InternalAut_1(\G_a)$'' on the ``$G$--module'' $H\F_{2*} X$.\todo{Say the word ``strict'' here.}
 \end{example}
 
 \begin{example}
