notes from conversation with Nat

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -11,6 +11,27 @@
 
 \todo[inline]{Since you spend so much time talking about descent in other parts of these notes, maybe you should also read the end of the AHS $H_\infty$ paper where they claim to recast their results in the usual language of descent.}
 
+\todo[inline]{Conversation with Nat on 2/9 suggests taking the following route in this chapter:
+contexts for $E_\infty$ mapping spaces in general;
+Subgroups and level structures;
+the Drinfel'd ring and the universal level structure;
+the isogenies pile;
+power operations and Adams operations, after Ando (naturally indexed vs indexed on subgroups; have a look at the Screenshot you took on this day);
+comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)$ on $M \otimes_{E_n^*} D_\infty$ (this is a modern result due to Tomer, Tobi, Lukas, and Nat);
+$H_\infty$ $MU$--orientations and Matt's thesis;
+the analogous results for $\Theta^k$--structures.
+In particular, leave character theory, $p$--divisible groups, and rational phenomena for spillover at the end of the year. They aren't strictly necessary to telling the story; you just need to know a little about the Drinfel'd ring to construct Matt's maps.  (If you have time, though, the point is that the rationalized Drinfel'd ring carries the universal level structure which is also an isomorphism.)}
+
+\todo[inline]{The stuff around 4.3.1-2 of Matt's published thesis talks about $H_\infty$--maps being determined by their values on $*$ and $\CP^\infty$, which is an interesting result.  You might also compare with Butowiez--Turner.}
+
+\todo[inline]{Work in height $1$ (and height $2$??) examples through this?  $K$--theory is pretty accessible, and the height $2$ examples are somewhat understood (Charles, Yifei), and they're both relevant for the elliptic $M\String$ story.  (There's also the pile of elliptic curves with isogenies...)}
+
+\todo[inline]{Nat warns that the very end of Matt's thesis uses character theory for $S^1$, which you have to be very careful about to pull off correctly.  ($S^1$ is not a finite group, but in certain contexts it can be approximated by its torsion subgroups...)}
+
+
+
+
+
 
 
 \section{Subgroups and level structures}
@@ -21,6 +42,9 @@ Here's a definition of an isogeny.  Weierstrass preparation can be phrased as sa
 \begin{definition}
 Take $C$ and $D$ to be formal curves over $X$.  A map $f: C \to D$ is an \textit{isogeny} when the induced map $C \to C \times_X D$ exhibits $C$ as a divisor on $C \times_X D$ as $D$--schemes.
 \end{definition}
+\todo{Be sure to compare this definition with the usual one for formal groups: surjections with finite cokernel.  These are easy to come up with lots of examples for!  (Don't ditch this definition, though, since it's the one that lets you prove something about Weierstrass preparation geometrically.)}
+
+
 
 
 In fact, every map in positive characteristic can be factored as a coordinate change and an isogeny, which is a weak form of preparation.
@@ -95,6 +119,7 @@ nothing you haven't already seen. in fact, most of it is done in coordinates, wi
 
 Section 7: level--$A$ structures: smooth, finite, flat
 
+\todo{Be careful to distinguish the physical group $A$ from the associated \emph{constant group scheme}.}
 As discussed long ago, for finite abelian $p$--groups there's a scheme \[\InternalHom{FormalGroups}(A, \G)(Y) = \InternalHom{Groups}(A, \G(Y)).\]  If $\G$ were a discrete group, we could decompose this as \[\text{``$\InternalHom{FormalGroups}(A, \G) = \coprod_{B \le A} \Mono(A/B, \G)$''}\] along the different kernel types of homomorphisms, but $\Mono$ does not exist as a scheme.\todo{Come up with a really compelling example.  You had one when you were talking to Danny and Jeremy.  Probably you got it \emph{from} Jeremy.}  Level structures approximate this as best one can be approximating $\G$ by something essentially discrete: an \'etale group scheme.
 
 For a map $\phi: A \to \G(Y)$, we write $[\phi A] = \sum_{a \in A}[\phi(a)]$.  We also write $\Lambda = (\Q_p / \Z_p)^n$, so that $\Lambda[p^m] = (\Z/p^m)^{\times n}$.  Note \[|\CatOf{AbelianGroups}(A, \Lambda)| = |A|^n = \operatorname{rank} \left( \InternalHom{FormalGroups}(A, \G) \to X \right).\]
