fixed a typo in Lecture 2.2

--- a/quillen.tex
+++ b/quillen.tex
@@ -315,7 +315,7 @@ We then augment this to a scheme $\operatorname{Mer}(C, \mathbb G_m)$ of meromor
 \end{definition}
 
 \begin{theorem}\citeme{This is Prop 5.26 in FSFG.}
-In the case of a formal curve $C$, there is a short exact sequence of formal groups \[0 \to \InternalHom{FormalSchemes}(C, \mathbb G_m) \to \operatorname{Mer}(C, \mathbb G_m) \to \Div(C) \to 0.\]
+In the case of a formal curve $C$, there is a short exact sequence of formal groups \[0 \to \InternalHom{FormalSchemes}(C, \mathbb G_m) \to \operatorname{Mer}(C, \mathbb G_m) \to \Div(C) \to 0. \qed\]
 \end{theorem}
 
 
