add a to-do from a conversation with christian

--- a/mo.tex
+++ b/mo.tex
@@ -341,6 +341,7 @@ As group schemes, we have thus calculated \[\RP^\infty_{H\F_2} \cong \G_a.\]
 \end{example}
 
 \begin{example}
+\todo{We could be clearer about the \emph{two} things that are happening here.  First, we are comparing informal schemes to formal schemes (or polynomials to power series).  Second, we are comparing external Hom--objects to internal Hom--objects (or sets of power series over $\F_2$ to schemes of power series over $\F_2$--algebras).}
 Additionally, this convention comports with our analysis of $\Spec \mathcal AP_0$.  Note that the following morphism sets are very different:
 \begin{align*}
 \CatOf{GroupSchemes}_{/\F_2}(\mathbb G_a, \mathbb G_a) & \cong \CatOf{HopfAlgebras}_{\F_2/}(\F_2[x], \F_2[x]) \\
