--- a/main.tex
+++ b/main.tex
@@ -133,6 +133,7 @@
 \newcommand{\gpd}{\mathrm{gpd}}
 \newcommand{\id}{\mathrm{id}}
 \newcommand{\ThomSheaf}[1]{\mathbb{L}(#1)}
+\newcommand{\FGps}{\mathrm{FGps}}
 
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Spf}{Spf}
