some more copy-paste for Chapter 6
my goodness, what a tangle of ideas

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -611,6 +611,38 @@ where the square forms a point in $\underline{\G}(R)$ and $\ell$ is a level--$A$
 or equivalently a map of formal schemes $\Level_1(\G) \to S$ and an isogeny $q\co d_0^* \G d_1^* \G$ whose kernel on $\Level(A, \G)$ is $A$.  Therefore, descent data for level structures on the formal group $\G$ (in the sense of Section 3) are equivalent to descent data for level structures on the functor $\underline{\G}$.
 \end{example}
 
+------ Section 12: Descent for level structures on Lubin--Tate groups ------
+
+Let $k$ be perfect of positive characteristic $p$, and let $\Gamma$ be a formal group of finite height over $k$.  Recall that this induces a relative Frobenius
+\begin{center}
+\begin{tikzcd}
+\Gamma \arrow{r}{F} \arrow[bend left]{rr}{\phi_\Gamma} \arrow{rd} & \phi_k^* \Gamma \arrow{r} \arrow{d} & \Gamma \arrow{d} \\
+& \Spec k \arrow{r}{\phi_k} & \Spec k.
+\end{tikzcd}
+\end{center}
+The map $F$ is an isogeny of degree $p$, with kernel the divisor $p \cdot [0]$.  Recall also that a deformation $H$ of $\Gamma$ to $T$ induces a map $\underline{H} \to \Def(\Gamma)$, and there is a universal such $\G$ over the ground scheme $S \cong \Spf \W(k)\ps{u_1, \ldots, u_{d-1}}$ such that $\underline{\G} \to \Def(\Gamma)$ is an isomorphism of functors over $\FGps$.
+
+Now consider a point in $\Level(A, \Def \Gamma)$:
+\begin{center}
+\begin{tikzcd}
+A_T \arrow{r}{\ell} \arrow{rd} & H \arrow{d} & H_0 \arrow{l} \arrow{r}{f} \arrow{d} & \Gamma \arrow{d} \\
+& T & T_0 \arrow{l} \arrow{r}{j} & \Spec k.
+\end{tikzcd}
+\end{center}
+The level structure $\ell$ gives rise to a quotient isogeny $q\co H \to H'$.  Since $A$ is sent to $0$ in $\sheaf O_{T_0}$, there is a canonical map $\bar q$ fitting into the diagram
+\begin{center}
+\begin{tikzcd}
+H \arrow{rr}{q} \arrow{rdd} & & H' \arrow{ldd} \\
+& & & H_0 \arrow{rdd} \arrow[crossing over]{lllu} \arrow{r} & H_0' \arrow[crossing over]{llu} \arrow{dd} \arrow[densely dotted]{r}{\bar q} & (\phi^r)^* H_0 \arrow{ldd} \arrow{r} \arrow[leftarrow, bend right, crossing over]{ll} & H_0 \arrow{dd} \arrow{r}{f} & \Gamma \arrow{dd} \\
+& T \\
+& & & & T_0 \arrow{lllu} \arrow{rr}{\phi^r} & & T_0 \arrow{r}{j} & \Spec k.
+\end{tikzcd}
+\end{center}
+The map $\bar q$ combines with the rest of the maps to exhibit $H'$ as a deformation of $\Gamma$, and hence we get a natural transformation \[d_1\co \Level_1(\Def(\Gamma)) \to \Def(\Gamma).\]  Since $\phi^r \phi^s = \phi^{r+s}$, this gives descent data for level structures on $\Def(\Gamma)$.  Identifying this functor with $\underline{\G}$ using Lubin--Tate theory, we equivalently have shown the existence of descent data for level structures on $\underline{\G}$.
+
+Incidentally, the descent data constructed here is also the descent data that would come from the structure of an $E_\infty$--orientation on the Morava $E$--theory $E_d$, essentially because the divisor associated to the kernel of the relative Frobenius on the special fiber is forced to be $p[0]$, and everything is dictated by how the deformation theory \emph{has} to go (and the fact that the topological operations we're studying induce deformation-theoretic-describable operations on algebra).
+
+------Section 15: Level structures on elliptic curves, and the relation to the $\sigma$--orientation / the corresponding section of the $\Theta^3$--sheaf------
 
 
 
